--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "devDependencies": {
     "css-loader": "^3.5.1",
+    "csv-loader": "^3.0.2",
     "file-loader": "^6.0.0",
     "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "xml-loader": "^1.2.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
